fix: do not remove notification body if image present

If we show a notification with a long title, a context message and an
image, the line limit of the message body is set to 0 so that the image
can be flush against the icon.

This CL removes this limitation and therefore the "feature" of having
the image flush against the icon when the notification contains a lot of
text. The notification message can now contain:

0 title lines: 5 max lines message
1 title lines: 5 max lines message
2 title lines: 3 max lines message

This does not depend on whether there is an image or a context message.
We still make sure that there is at least 16px of space between the icon
and the image, if the text part is higher than the icon.

Bug: 697573
Change-Id: Ic8f2441de58e4503d93da025275b57ba5a2a92b9
Reviewed-on: https://chromium-review.googlesource.com/c/1350749
Reviewed-by: Peter Beverloo <peter@chromium.org>
Commit-Queue: Richard Knoll <knollr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616024}
Former-commit-id: 5004f1f273a5b968011f41aad397cb9acfb24979