ui/message_center/views/notification_view.cc
@@ -654,36 +654,15 @@ NotificationControlButtonsView* NotificationView::GetControlButtonsView()
 }
 
 int NotificationView::GetMessageLineLimit(int title_lines, int width) const {
-  // Image notifications require that the image must be kept flush against
-  // their icons, but we can allow more text if no image.
   int effective_title_lines = std::max(0, title_lines - 1);
-  int line_reduction_from_title = (image_view_ ? 1 : 2) * effective_title_lines;
-  if (!image_view_) {
-    // Title lines are counted as twice as big as message lines for the purpose
-    // of this calculation.
-    // The effect from the title reduction here should be:
-    //   * 0 title lines: 5 max lines message.
-    //   * 1 title line:  5 max lines message.
-    //   * 2 title lines: 3 max lines message.
-    return std::max(0, kMessageExpandedLineLimit - line_reduction_from_title);
-  }
-
-  int message_line_limit = kMessageCollapsedLineLimit;
-
-  // Subtract any lines taken by the context message.
-  if (context_message_view_) {
-    message_line_limit -= context_message_view_->GetLinesForWidthAndLimit(
-        width, kContextMessageLineLimit);
-  }
-
+  int line_reduction_from_title = 2 * effective_title_lines;
+  // Title lines are counted as twice as big as message lines for the purpose
+  // of this calculation.
   // The effect from the title reduction here should be:
-  //   * 0 title lines: 2 max lines message + context message.
-  //   * 1 title line:  2 max lines message + context message.
-  //   * 2 title lines: 1 max lines message + context message.
-  message_line_limit =
-      std::max(0, message_line_limit - line_reduction_from_title);
-
-  return message_line_limit;
+  //   * 0 title lines: 5 max lines message.
+  //   * 1 title line:  5 max lines message.
+  //   * 2 title lines: 3 max lines message.
+  return std::max(0, kMessageExpandedLineLimit - line_reduction_from_title);
 }
 
 int NotificationView::GetMessageHeight(int width, int limit) const {
